01_hosting_a_website_on_nginx/Kubernetes_deployment.yaml
#############################################################################
## Description: This is a yaml file for nginx-web app deployment 
## on K8s cluster using the docker image which is created
## by the Dockerfile on the dockerhub 
##
## CREATED BY: YADNESH PURAV
## CREATION DATE: 01 OCTOBER 2024
#############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-webapp
  labels:
    app: my-app
spec:
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-nginx-webapp
        image: yadup007/project_repo:my-nginx-webapp.v93 
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: my-app
  replicas: 3
