01_hosting_a_website_on_nginx/Kubernetes_pod.yaml
#############################################################################
## Description: This is a yaml file for nginx-web app pod creation 
## on K8s cluster using the docker image which is created
## by the Dockerfile on the dockerhub 
##
## CREATED BY: YADNESH PURAV
## CREATION DATE: 01 OCTOBER 2024
#############################################################################
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
  labels:
    app: my-app
    type: web-page
spec:
  containers:
  - name: my-nginx-webapp
    image: yadup007/project_repo:my-nginx-webapp.v83
