01_hosting_a_website_on_nginx/Kubernetes_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
  labels:
    app: my-app
spec:
  type: LoadBalancer
  ports: 
  - targetPort: 80
    port: 8080
    nodePort: 30000
  selector:
    app: my-app
